<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="frag"
            type="kr.ac.unist.fragment.signup.FragSignUp2" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/intro_top_margin"
            android:layout_marginRight="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/rgb_333333"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="5.3sp"
                android:text="@string/infomation"
                android:textColor="@color/rgb_de000000"
                android:textSize="16dp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/rgb_99000000"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <EditText
                    android:id="@+id/et_brithday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:hint="생년월일 (6자리, 예) 630417)"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/rgb_0b000000"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:textColor="@color/rgb_99000000"
                        android:textSize="17dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rg_sex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checkedButton="@id/rb_man"
                        android:divider="?android:attr/dividerHorizontal"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rb_man"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layoutDirection="rtl"
                            android:text="@string/man"
                            android:textColor="@color/rgb_de000000"
                            android:textSize="17dp"
                            android:theme="@style/CommonRadioButton" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rb_woman"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layoutDirection="rtl"
                            android:text="@string/women"
                            android:textColor="@color/rgb_de000000"
                            android:textSize="17dp"
                            android:theme="@style/CommonRadioButton" />


                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/rgb_0b000000"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eye_surgery"
                        android:textColor="@color/rgb_99000000"
                        android:textSize="17dp"></androidx.appcompat.widget.AppCompatTextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cb_lasik"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layoutDirection="rtl"
                        android:tag="LASIk"
                        android:text="@string/lasik"
                        android:textColor="@color/rgb_de000000"
                        android:textSize="17dp"
                        android:theme="@style/CommonRadioButton" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:src="@color/rgb_1f000000" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cb_lasek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layoutDirection="rtl"
                        android:tag="LASEk"
                        android:text="@string/lasek"
                        android:textColor="@color/rgb_de000000"
                        android:textSize="17dp"
                        android:theme="@style/CommonRadioButton" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:src="@color/rgb_1f000000" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cb_etc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layoutDirection="rtl"
                        android:tag="etc"
                        android:text="@string/etc"
                        android:textColor="@color/rgb_de000000"
                        android:textSize="17dp"
                        android:theme="@style/CommonRadioButton" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cb_none"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layoutDirection="rtl"
                        android:tag="none"
                        android:text="@string/none"
                        android:textColor="@color/rgb_de000000"
                        android:textSize="17dp"
                        android:theme="@style/CommonRadioButton" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="170dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/border_corner_log_in"
            android:gravity="center"
            android:onClick="@{frag::clickNext}"
            android:text="@string/next_2"
            android:textColor="@color/rgb_333333"
            android:textSize="15dp"
            android:textStyle="normal" />

    </RelativeLayout>

</layout>