<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/intro_top_margin"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/rgb_333333"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="5.3sp"
                android:text="@string/reset_password"
                android:textColor="@color/rgb_99000000"
                android:textSize="15dp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/rgb_99000000"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:drawableRight="@drawable/ic_trailing_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/rgb_99000000"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:drawableRight="@drawable/ic_trailing_icon"
                    android:hint="@string/password_re"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/border_corner_log_in"
                android:gravity="center"
                android:text="@string/setting_new_password"
                android:textColor="@color/rgb_333333"
                android:textSize="18dp"
                android:textStyle="normal" />

        </LinearLayout>

    </RelativeLayout>

</layout>