<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="frag"
            type="kr.ac.unist.fragment.signup.FragSignUp1" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="@dimen/intro_top_margin"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/rgb_333333"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="5.3sp"
                android:text="@string/account"
                android:textColor="@color/rgb_de000000"
                android:textSize="16dp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/rgb_99000000"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <kr.ac.unist.custom.CustomEditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:hint="@string/id"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/rgb_99000000"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <kr.ac.unist.custom.CustomEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:drawableRight="@drawable/ic_trailing_icon"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:textColorHint="@color/rgb_99000000"
                app:boxBackgroundColor="@android:color/transparent"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <kr.ac.unist.custom.CustomEditText
                    android:id="@+id/et_password_re"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edittext"
                    android:drawableRight="@drawable/ic_trailing_icon"
                    android:hint="@string/password_re"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingTop="15dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="15dp"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="170dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/border_corner_log_in"
            android:gravity="center"
            android:text="@string/next_1"
            android:onClick="@{frag::clickNext}"
            android:textColor="@color/rgb_333333"
            android:textSize="15dp"
            android:textStyle="normal" />

    </RelativeLayout>

</layout>